refactor: clean code principles